--- a/src/PHPlayer/MusicBundle/Resources/views/Upload/index.html.twig
+++ b/src/PHPlayer/MusicBundle/Resources/views/Upload/index.html.twig
@@ -10,6 +10,10 @@
 	<script type="text/javascript" src="{{ asset('js/upload.js') }}"></script>
 {% endblock %}
 
+{% block topBar %}
+	<a href="{{ path('phplayer_music_music_index') }}">Back</a>
+{% endblock %}
+
 {% block main %}
 	<div class="uploadArea showMessage">
 		<div class="inputs">
