Style upload inputs

--- a/src/PHPlayer/MusicBundle/Resources/views/Upload/index.html.twig
+++ b/src/PHPlayer/MusicBundle/Resources/views/Upload/index.html.twig
@@ -18,9 +18,10 @@
 	<div class="uploadArea showMessage">
 		<div class="inputs">
 			<input id="artist" value="Artist" />
+			-
 			<input id="album" value="Album" />
 			<br>
-			<button id="applyMove">Apply</button>
+			<button id="applyMove">APPLY</button>
 		</div>
 		<div id="files">
 		</div>
