--- a/web/css/global.css
+++ b/web/css/global.css
@@ -31,3 +31,15 @@ body {
 		color: #10b3ff;
 		font-size: 24px;
 	}
+
+.album .icon {
+	display: inline-block;
+	vertical-align: middle;
+	position: relative;
+	top: -2px;
+	width: 25px;
+	height: 25px;
+	
+	cursor: pointer;
+	background: center top no-repeat;
+}
