Upload progress indicator added. Play/pause added to tiles.

--- a/src/PHPlayer/MusicBundle/Resources/views/Music/_list.html.twig
+++ b/src/PHPlayer/MusicBundle/Resources/views/Music/_list.html.twig
@@ -35,7 +35,7 @@
 				    	    	    	</span>
 			    	    	    		{{ track.viewName }}
 			    	    	    		<span class="fileActions">
-				    	    	    		<a class="rename">rename</a>
+				    	    	    		<a class="rename" href="#">rename</a>
 				    	    	    		<a class="delete" href="{{ path('phplayer_music_upload_deletefile', {artist: artist.name, album: album.name, track: track.name}) }}">delete</a>
 				    	    	    	</span>
 			    	    	    </div>
