--- a/web/css/upload.css
+++ b/web/css/upload.css
@@ -27,7 +27,14 @@
 	right: 0;
 	background-size: 100%;
 	opacity: 0.2;
+	z-index: -2;
+}
+#progressIndicator {
+	position: absolute;
 	z-index: -1;
+	left: 50%;
+	top: 50%;
+	margin: -112px -112px;
 }
 .inputs {
 	color: #10b3ff;
@@ -94,7 +101,9 @@ button {
 
 		.track .fileActions a {
 			font-weight: normal;
-			color: #10B3FF;
 			float: right;
 			margin-left: 10px;
+		}
+		.track .fileActions a:hover {
+			color: white;
 		}
