--- a/src/PHPlayer/MusicBundle/Resources/views/Music/_list.html.twig
+++ b/src/PHPlayer/MusicBundle/Resources/views/Music/_list.html.twig
@@ -1,5 +1,5 @@
 {% for artist in artists %}
-
+	{% spaceless %}
 	<div class="artist" data-name="{{ artist.name }}">
 
 		{% for album in artist.albums %}
@@ -19,9 +19,13 @@
 		    	    	
 		    	    	<a class="icon upload" href="{{ path('phplayer_music_upload_index', {artistName: artist.name, albumName: album.name}) }}"></a>
 
-		    	    	<div class="albumName">
+	    	    		<div class="albumName">
+		    	    		<span class="playActions">
+			    	    		<a class="icon play"></a>
+			    	    		<a class="icon enque"></a>
+			    	    	</span>
 		    	    		{{ album.name }}
-		    	    	</div>
+	    	    		</div>
 
 	    	    	</div>
 
@@ -29,15 +33,15 @@
 		    	    	{% for track in album.tracks %}
 		    	    		{% if track.isAudioFile %}
 			    	    	    <div class="track" data-url="{{ asset(track.webPath) }}" data-name="{{ track.name }}" data-view-name="{{ track.viewName }}" >
-			    	    	    		<span class="playActions">
-				    	    	    		<a class="icon play"></a>
-				    	    	    		<a class="icon enque"></a>
-				    	    	    	</span>
-			    	    	    		{{ track.viewName }}
-			    	    	    		<span class="fileActions">
-				    	    	    		<a class="rename" href="#">rename</a>
-				    	    	    		<a class="delete" href="{{ path('phplayer_music_upload_deletefile', {artist: artist.name, album: album.name, track: track.name}) }}">delete</a>
-				    	    	    	</span>
+		    	    	    		<span class="playActions">
+			    	    	    		<a class="icon play"></a>
+			    	    	    		<a class="icon enque"></a>
+			    	    	    	</span>
+		    	    	    		{{ track.viewName }}
+		    	    	    		<span class="fileActions">
+			    	    	    		<a class="rename" href="#">rename</a>
+			    	    	    		<a class="delete" href="{{ path('phplayer_music_upload_deletefile', {artist: artist.name, album: album.name, track: track.name}) }}">delete</a>
+			    	    	    	</span>
 			    	    	    </div>
 		    	    		{% endif %}
 		    	    	{% endfor %}
@@ -49,5 +53,6 @@
 		{% endfor %}
 
 	</div>
+	{% endspaceless %}
 
 {% endfor %}
