Adjustments for mobile display

--- a/src/PHPlayer/MusicBundle/Resources/views/base.html.twig
+++ b/src/PHPlayer/MusicBundle/Resources/views/base.html.twig
@@ -2,6 +2,8 @@
 <head>
 	<title>{{ title|default('PHPlayer') }}</title>
 
+	<meta name="viewport" content="width=800">
+
 	<link rel="stylesheet" type="text/css" href="{{ asset('css/vendor/fw_base.css') }}" />
 	<link rel="stylesheet" type="text/css" href="{{ asset('css/global.css') }}" />
 
