--- a/web/css/music.css
+++ b/web/css/music.css
@@ -147,12 +147,18 @@ body {
 			display: none;
 		}
 	#que .tile .trackViewName {
+		max-height: 2em;
+		overflow: hidden;
+
 		color: #e4e4e4;
 		font-weight: bold;
 		font-size: 18px;
 		line-height: 1.08em;
 	}
 	#que .tile .artistName {
+		max-height: 2em;
+		overflow: hidden;
+
 		color: #a5a5a5;
 		font-weight: bold;
 		font-size: 11px;
