--- a/src/PHPlayer/MusicBundle/Resources/views/Music/index.html.twig
+++ b/src/PHPlayer/MusicBundle/Resources/views/Music/index.html.twig
@@ -5,9 +5,9 @@
 	<script type="text/javascript" src="{{ asset('js/music.js') }}"></script>
 {% endblock %}
 
-{#{% block topBar %}
+{% block topBar %}
 	<a href="{{ path('phplayer_music_upload_index') }}"><i class="icon upload"></i>Upload</a>
-{% endblock %}#}
+{% endblock %}
 
 {% block main %}
 
