--- a/src/PHPlayer/MusicBundle/Resources/views/Music/index.html.twig
+++ b/src/PHPlayer/MusicBundle/Resources/views/Music/index.html.twig
@@ -7,6 +7,7 @@
 
 {% block topBar %}
 	<a href="{{ path('phplayer_music_upload_index') }}"><i class="icon upload"></i>Upload</a>
+	random: {{ random }}
 {% endblock %}
 
 {% block main %}
