--- a/src/PHPlayer/MusicBundle/Resources/views/Music/_album.html.twig
+++ b/src/PHPlayer/MusicBundle/Resources/views/Music/_album.html.twig
@@ -10,7 +10,7 @@
 		    	{% endif %}
 
 		    	<div class="artistName">
-		    		{{ album.artistName }}
+		    		<span class="name">{{ album.artistName }}</span>
 		    	</div>
 		    	
 		    	{% if album.level == 2 %}
@@ -22,7 +22,7 @@
 	    	    		<a class="icon play"></a>
 	    	    		<a class="icon enque"></a>
 	    	    	</span>
-		    		{{ album.albumName }}
+		    		<span class="name">{{ album.albumName }}</span>
 	    		</div>
 
 	    	</div>
@@ -37,9 +37,9 @@
 	    	    	    	</span>
 
 	    	    	    	{% if showAllFiles|default(false) %}
-		    	    			{{ track.name }}
+		    	    			<span class="name">{{ track.name }}</span>
 	    	    			{% else %}
-	    	    				{{ track.viewName }}
+	    	    				<span class="name">{{ track.viewName }}</span>
 	    	    	    	{% endif %}
 
 		    	    		<span class="fileActions">
