Changed styling a bit.

--- a/src/PHPlayer/MusicBundle/Resources/views/Music/index.html.twig
+++ b/src/PHPlayer/MusicBundle/Resources/views/Music/index.html.twig
@@ -8,7 +8,7 @@
 
 {% block topBar %}
 	<a href="{{ path('phplayer_music_upload_index') }}"><i class="icon upload"></i>Upload</a>
-	random: {{ random }}
+	<!-- random: {{ random }} -->
 	<input placeholder="Search here..." class="search" />
 {% endblock %}
 
